# fukui

./: CMakeLists.txt  INSTALL  LICENSE  README.md  fukui.f90  goon.f90  help.f90  onlygrid.f90
modules/: computation.f90  grid.f90  main.f90  output.f90  pi.f90  wfn.f90
openmp/: init_par.f90
utils/: bstk_astk.f90  bstk_astk.x  cube2stk.f90  fukui.sh  mwfn2piorbs.sh  som2sg.sh
